tests/baselines/reference/YieldExpression6_es6.errors.txt
tests/cases/conformance/es6/yieldExpressions/YieldExpression6_es6.ts(2,9): error TS2489: An iterator must have a 'next()' method.


==== tests/cases/conformance/es6/yieldExpressions/YieldExpression6_es6.ts (1 errors) ====
    function* foo() {
      yield*foo
            ~~~
!!! error TS2489: An iterator must have a 'next()' method.
    }